# codewiki

./: .gitignore  CLOUD_API_FULL_TEST_RESULTS.md  CLOUD_API_QUICK_REFERENCE.md  EXTRACTION_SUMMARY.md  LICENSE  README.md  pyproject.toml  setup.py
codewiki/: __init__.py  cli.py  doc_generator.py  inspect_lifecycle_result.py  lifecycle_classifier.py  llm_client.py  llm_client_lir.py  orchestrator.py  repo_scanner.py
config/: code_wiki_config.yaml  codewiki_self_config.yaml  llm_providers.json  llm_providers_optimized.json
docs/: CODE_WIKI_DESIGN.md  CODE_WIKI_LLM_INTEGRATION_GUIDE.md  CODE_WIKI_OPERATIONAL_GUIDE.md  CODE_WIKI_V1.1_LLM_INTEGRATION_COMPLETE.md  CODE_WIKI_V1.1_LM_STUDIO_TEST_RESULTS.md  CODE_WIKI_V1.2_FINAL_POLISH.md  CODE_WIKI_V1.2_TESTING_GUIDE.md  CODE_WIKI_V1.2_TEST_RESULTS.md  CODE_WIKI_V1_COMPLETE_REVIEW.md  LIR_INTEGRATION_GUIDE.md  MULTI_PROVIDER_ARCHITECTURE.md  REASONING_MODEL_FIX.md
docs/architecture/: CODE_WIKI_OVERVIEW.generated.md  SERVICE_CATALOG.generated.md
docs/archive/lir-extraction/: CODE_WIKI_V1.2_HYBRID_COMPLETE.md  CODE_WIKI_V1.2_IMPLEMENTATION_SUMMARY.md  CODE_WIKI_V1.2_POLISH_CHECKLIST.md  FAN_NOISE_ANALYSIS_SUMMARY.md  FAN_NOISE_QUICK_REFERENCE.md  LLM_PERFORMANCE_ANALYSIS.md  LLM_PERFORMANCE_DIAGRAM.md  README.md  VALIDATION_PLAN.md  VALIDATION_REPORT.md
docs/archive/lir-extraction/validation-results/: log_legacy.txt  log_lir_balanced.txt  metrics_legacy.json  (+4 more)
tests/: __init__.py  test_doc_generator.py  test_lifecycle_classifier.py  test_multi_provider.py  test_repo_scanner.py  test_unclosed_think_tag.py
