[project]
name = "codewiki"
version = "2.0.0"
description = "LLM-enhanced code lifecycle analysis and documentation generator"
authors = [{name = "Jay"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21.0", "pytest-mock>=3.11.0", "black>=23.0", "ruff>=0.1"]
# LIR integration (install separately: pip install -e ../lir)
lir = ["lir"]

[project.scripts]
codewiki = "codewiki.cli:main"

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

